--- a/default.css
+++ b/default.css
@@ -432,5 +432,16 @@ h6 { font-size: 16px;}
 
 }
 
+/* hide and show get in touch section */
 
+#content-desktop {display: block;}
+#content-mobile {display: none;}
 
+@media screen and (max-width: 768px) {
+
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
+}
+
+/* hide and show get in touch section */
