--- a/default.css
+++ b/default.css
@@ -44,6 +44,8 @@ p, li, span, label, input, textarea{
 a{
 	text-decoration: none;
 	color:#17a2b8;
+	/* border: none;
+	outline:none; */
 }
 
 ul{
@@ -437,7 +439,7 @@ h6 { font-size: 16px;}
 #content-desktop {display: block;}
 #content-mobile {display: none;}
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 868px) {
 
 #content-desktop {display: none;}
 #content-mobile {display: block;}
