--- a/default.css
+++ b/default.css
@@ -44,6 +44,8 @@ p, li, span, label, input, textarea{
 a{
 	text-decoration: none;
 	color:#17a2b8;
+	/* border: none;
+	outline:none; */
 }
 
 ul{
@@ -332,7 +334,7 @@ h6 { font-size: 16px;}
 	display: block;
 	width: 100%;
 	height:180px;
-	object-fit: cover;
+	/* object-fit: cover; */
 }
 
 .post-preview{
@@ -432,5 +434,17 @@ h6 { font-size: 16px;}
 
 }
 
+/* hide and show get in touch section */
 
+#content-desktop {display: block;}
+#content-mobile {display: none;}
+
+@media screen and (max-width: 868px) {
+
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
+}
+
+/* hide and show get in touch section */
 
